# mobility-model-simulator

./: README.md
core/: .clang-format  .clangd  CMakeLists.txt
core/cmake/: msvc-static-runtime.cmake  pre-configure.cmake
core/src/: app-delegate.cc  app-delegate.hh  main.cc
core/src/fundamental/: optref.hh  rect2.hh  rect2.hh.inl  type_traits.hh  types.hh  vec.hh  vec2.hh  vec2.hh.inl  vec3.hh  vec3.hh.inl
core/src/physics/: mass-point-world.cc  mass-point-world.hh  mass-point.cc  mass-point.hh
core/src/protos/: mobmodel-simulator.grpc.pb.cc  mobmodel-simulator.grpc.pb.h  mobmodel-simulator.pb.cc  mobmodel-simulator.pb.h
core/src/simul/: camera.cc  camera.hh  coverage-map-cell.hh  coverage-map-cell.hh.inl  coverage-map.cc  coverage-map.hh  grid-map-view-iterator.hh  grid-map-view.hh  grid-map-view.hh.inl  grid-map.hh  grid-map.hh.inl  mobility-model-simulator-service.cc  mobility-model-simulator-service.hh  mobility-model-simulator.cc  mobility-model-simulator.hh  rotary-wing-uav-pilot.cc  rotary-wing-uav-pilot.hh  uav-builder.cc  uav-builder.hh  uav-control-tower.cc  uav-control-tower.hh  uav-mission.cc  uav-mission.hh  uav-pilot.cc  uav-pilot.hh  uav.cc  uav.hh
core/src/simul/mobmodels/: mission-planner.hh  random-waypoint-planner.cc  random-waypoint-planner.hh
gui/: .flake8  .pylintrc  .style.yapf  main.py  requirements.txt  rsc.py
gui/gui/components/: __init__.py  config_window.py  coverage_graph_window.py  matplotlib_surface.py  simulation_map_window.py  visit_graph_window.py
gui/gui/core/: __init__.py  director.py  scene.py
gui/gui/scenes/: __init__.py
gui/gui/scenes/simulation/: simulation_scene.py
gui/protos/: mobmodel_simulator_pb2.py  mobmodel_simulator_pb2_grpc.py
gui/rsc/: theme.json
gui/simul/: __init__.py  types.py  uav.py
